--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
 </section> -->
 <!-- End teaser video -->
 
+<!-- pipline figure-->
+<div class="item">
+  <img src="static\images\pipline.png" alt="MY ALT TEXT"/>
+  <h2 class="subtitle has-text-centered">
+    Pipline figure
+  </h2>
+</div>
+
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
@@ -160,6 +168,63 @@
   </div>
 </section>
 <!-- End paper abstract -->
+
+<!-- video -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-3">Tracking results</h2>
+
+      <!-- 横向滚动容器 -->
+      <div class="scroll-container">
+        <video autoplay controls muted loop>
+          <source src="static/videos/boxer.mp4" type="video/mp4">
+        </video>
+        <video autoplay controls muted loop>
+          <source src="static/videos/girl.mp4" type="video/mp4">
+        </video>
+        <video autoplay controls muted loop>
+          <source src="static/videos/worker.mp4" type="video/mp4">
+        </video>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+<!-- Video carousel -->
+<!-- <section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-3">Tracking results</h2>
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-video1">
+          <video poster="" id="video1" autoplay controls muted loop height="100%">
+ 
+            <source src="static/videos/boxer.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video2">
+          <video poster="" id="video2" autoplay controls muted loop height="100%">
+
+            <source src="static/videos/GIRL.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video3">
+          <video poster="" id="video3" autoplay controls muted loop height="100%">\
+     
+            <source src="static/videos/worker.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
+<!-- End video carousel -->
 
 
 <!-- Image carousel -->
@@ -219,38 +284,7 @@
 <!-- End youtube video -->
 
 
-<!-- Video carousel -->
-<!-- <section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
- 
-            <source src="static/videos/carousel1.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
 
-            <source src="static/videos/carousel2.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-     
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-<!-- End video carousel -->
 
 
 
@@ -307,3 +341,21 @@
 
   </body>
   </html>
+
+
+  
+<style>
+.scroll-container {
+  display: flex;
+  gap: 15px;               /* 视频间距 */
+  overflow-x: auto;        /* 横向滚动 */
+  scroll-behavior: smooth; /* 平滑滚动 */
+  padding: 10px 0;
+}
+
+.scroll-container video {
+  flex: 0 0 auto;          /* 阻止视频缩放 */
+  width: 250px;            /* 控制视频显示大小 */
+  border-radius: 10px;     /* 圆角美化，可选 */
+}
+</style>
