--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">Topology-Aware Gaussian Splatting for Dynamic Mesh Modeling and Tracking</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -343,7 +343,7 @@
   </html>
 
 
-  
+
 <style>
 .scroll-container {
   display: flex;
