--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <!-- End teaser video -->
 
 <!-- pipline figure-->
-<div class="item">
+<div class="center">
   <img src="static\images\pipline.png" alt="MY ALT TEXT"/>
   <h2 class="subtitle has-text-centered">
     Pipline figure
@@ -170,7 +170,7 @@
 <!-- End paper abstract -->
 
 <!-- video -->
-<section class="hero is-small">
+<div class="center">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Tracking results</h2>
@@ -357,5 +357,13 @@
   flex: 0 0 auto;          /* 阻止视频缩放 */
   width: 250px;            /* 控制视频显示大小 */
   border-radius: 10px;     /* 圆角美化，可选 */
+}
+
+.center {
+  max-width: 800px;
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 </style>
