--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
     </div>
   </div>
-</section>
+</div>
 
 
 
@@ -339,8 +339,8 @@
 
     <!-- End of Statcounter Code -->
 
-  </body>
-  </html>
+</body>
+</html>
 
 
 
