--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://haza628.github.io/" target="_blank">Hanzhi Guo</a><sup>*</sup>,
+                <a href="https://haza628.github.io/" target="_blank">Hanzhi Guo</a><sup>1</sup>,
               </span>
               <!-- <span class="author-block">
                 <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,
@@ -66,7 +66,7 @@
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block">Beijing Engineering Research Center of Mixed Reality and Advanced Display,School of Optics and Photonics, Beijing Institute of Technology
+              <span class="author-block"><sup>1</sup>Beijing Engineering Research Center of Mixed Reality and Advanced Display,School of Optics and Photonics, Beijing Institute of Technology
                 <!-- <br>Conferance name and year -->
               </span>
               <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
