add modeling videos

--- a/index.html
+++ b/index.html
@@ -178,18 +178,42 @@
       <!-- 横向滚动容器 -->
       <div class="scroll-container">
         <video autoplay controls muted loop>
-          <source src="static/videos/boxer.mp4" type="video/mp4">
+          <source src="static/videos/tracking_boxer.mp4" type="video/mp4">
         </video>
         <video autoplay controls muted loop>
-          <source src="static/videos/girl.mp4" type="video/mp4">
+          <source src="static/videos/tracking_girl.mp4" type="video/mp4">
         </video>
         <video autoplay controls muted loop>
-          <source src="static/videos/worker.mp4" type="video/mp4">
+          <source src="static/videos/tracking_worker.mp4" type="video/mp4">
         </video>
       </div>
     </div>
   </div>
 </div>
+
+
+<!-- video -->
+<div class="center">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-3">Modeling results</h2>
+
+      <!-- 横向滚动容器 -->
+      <div class="scroll-container">
+        <video autoplay controls muted loop>
+          <source src="static/videos/modeling_boxer.mp4" type="video/mp4">
+        </video>
+        <video autoplay controls muted loop>
+          <source src="static/videos/modeling_girl.mp4" type="video/mp4">
+        </video>
+        <video autoplay controls muted loop>
+          <source src="static/videos/modeling_worker.mp4" type="video/mp4">
+        </video>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 
