--- a/index.html
+++ b/index.html
@@ -57,12 +57,9 @@
               <span class="author-block">
                 <a href="https://haza628.github.io/" target="_blank">Hanzhi Guo</a><sup>1</sup>,
               </span>
-              <!-- <span class="author-block">
-                <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,
-              </span>
               <span class="author-block">
-                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-              </span> -->
+                <a href="https://themosthandsomeofbit.github.io/" target="_blank">Yixiao Chen</a><sup>1</sup>,
+              </span>
             </div>
 
             <div class="is-size-5 publication-authors">
